@@ -432,23 +432,6 @@ echo "<h1>".__("Offline update")."</h1>";
 		});
 	}
 
-    // Helper function that formats the file sizes
-    function formatFileSize(bytes) {
-        if (typeof bytes !== 'number') {
-            return '';
-        }
-
-        if (bytes >= 1000000000) {
-            return (bytes / 1000000000).toFixed(2) + ' GB';
-        }
-
-        if (bytes >= 1000000) {
-            return (bytes / 1000000).toFixed(2) + ' MB';
-        }
-
-        return (bytes / 1000).toFixed(2) + ' KB';
-    }
-    
     function install_package (package) {
 		var parameters = {};
 		parameters['page'] = 'godmode/setup/offline_update';
