@@ -422,6 +422,23 @@ function toggleUsersInfo(id_group) {
 	}
 }
 
+// Helper function that formats the file sizes
+function formatFileSize(bytes) {
+	if (typeof bytes !== 'number') {
+		return '';
+	}
+
+	if (bytes >= 1000000000) {
+		return (bytes / 1000000000).toFixed(2) + ' GB';
+	}
+
+	if (bytes >= 1000000) {
+		return (bytes / 1000000).toFixed(2) + ' MB';
+	}
+
+	return (bytes / 1000).toFixed(2) + ' KB';
+}
+
 $(document).ready (function () {
 	
 
