@@ -758,23 +758,6 @@ function form_upload () {
 
 }
 
-// Helper function that formats the file sizes
-function formatFileSize(bytes) {
-    if (typeof bytes !== 'number') {
-        return '';
-    }
-
-    if (bytes >= 1000000000) {
-        return (bytes / 1000000000).toFixed(2) + ' GB';
-    }
-
-    if (bytes >= 1000000) {
-        return (bytes / 1000000).toFixed(2) + ' MB';
-    }
-
-    return (bytes / 1000).toFixed(2) + ' KB';
-}
-
 // Form validation
 trim_element_on_submit('input[name="free_text"]');
 trim_element_on_submit('#text-name');
